Fix link text not wrapping on mobile.

--- a/style.css
+++ b/style.css
@@ -560,7 +560,6 @@ i {
     -webkit-user-select: none;
     touch-action: manipulation;
     vertical-align: baseline;
-    white-space: nowrap;
 }
 
 .social-links:hover {
